--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="assets/style.css?v=1" />
+    <!-- index.html -->
+<link rel="stylesheet" href="assets/style.css?v=4">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
