--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Irem Tokus</title>
+    <title>Irem Tokus Portfolio</title>
+    <link rel="icon" type="image/png" href="assets/favicon.ico">
+
+
+
 
     <!-- Fonts -->
     <link
